# totato

./: CMakeLists.txt  flake.nix
.github/workflows/: cd.yml  ci.yml
src/: CMakeLists.txt  config_commands.cpp  config_commands.hpp  fun_commands.cpp  fun_commands.hpp  main.cpp  management_commands.cpp  management_commands.hpp  managment_commands.cpp  managment_commands.hpp  message_cleanser.cpp  message_cleanser.hpp  message_command_dispatcher.cpp  message_command_dispatcher.hpp  tox_client.cpp  tox_client.hpp  tox_commands.cpp  tox_commands.hpp
